Fix dhclient to properly exit and teardown the configured lease when link is lost.  devd will start a new dhclient instance when link is restored.

PR:		bin/166656
Submitted by:	Peter Jeremy (mostly)
Reviewed by:	brooks (earlier version from Peter)
MFC after:	1 month